--- a/M5-Grupo/index.html
+++ b/M5-Grupo/index.html
@@ -388,9 +388,7 @@
                                     <i class='bx bxs-quote-alt-left' ></i>
                                 </div>
                                 <p class="testimonial__description">
-                                    They are the best watches that one acquires, also they are always with the latest 
-                                    news and trends, with a very comfortable price and especially with the attention 
-                                    you receive, they are always attentive to your questions.
+                                    Texto teste
                                 </p>
                                 <h3 class="testimonial__date">March 27. 2021</h3>
         
